<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/menu_programas_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/progamas"/>

    <Button
        android:id="@+id/menu_avaliacoes_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/avaliacoes" />

    <Button
        android:id="@+id/menu_exerc_aerobicos_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exerc_aerob" />

    <Button
        android:id="@+id/menu_exerc_musculacao_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exerc_musc" />

    <Button
        android:id="@+id/menu_finalizar_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/finalizar" />

</LinearLayout>