<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableRow android:layout_width="fill_parent" >

                <TextView android:text="@string/data" />

                <TextView
                    android:id="@+id/box_data_avaliacao"
                    style="@style/attr_data"
                    android:layout_weight="1"
                    android:layout_span="3"
                    android:text="  /  /    " >
                </TextView>
            </TableRow>

            <TableRow android:layout_width="fill_parent" >

                <TextView android:text="@string/peso" />

                <EditText
                    android:id="@+id/box_peso_aval"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="fill_parent" >

                <TextView android:text="@string/perc_gordura" />

                <EditText
                    android:id="@+id/box_perc_gord"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="fill_parent" >

                <TextView android:text="Pescoço" />

                <EditText
                    android:id="@+id/box_med_pescoco"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="fill_parent" >

                <TextView android:text="Bíceps - Esq" />

                <EditText
                    android:id="@+id/box_med_biceps_esq"
                    android:inputType="numberDecimal" />

                <TextView android:text="Dir" />

                <EditText
                    android:id="@+id/box_med_biceps_dir"
                    android:layout_width="fill_parent"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="fill_parent" >

                <TextView android:text="Atebraços - Esq" />

                <EditText
                    android:id="@+id/box_med_antebraco_esq"
                    android:inputType="numberDecimal" />

                <TextView android:text="Dir" />

                <EditText
                    android:id="@+id/box_med_antebraco_dir"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="fill_parent" >

                <TextView android:text="Peito" />

                <EditText
                    android:id="@+id/box_med_peitoral"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="fill_parent" >

                <TextView android:text="Cintura" />

                <EditText
                    android:id="@+id/box_med_cintura"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="fill_parent" >

                <TextView android:text="Quadril" />

                <EditText
                    android:id="@+id/box_med_quadril"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="fill_parent" >

                <TextView android:text="Coxas - Esq" />

                <EditText
                    android:id="@+id/box_med_coxa_esq"
                    android:inputType="numberDecimal" />

                <TextView android:text="Dir" />

                <EditText
                    android:id="@+id/box_med_coxa_dir"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="fill_parent" >

                <TextView android:text="Panturrilhas - Esq" />

                <EditText
                    android:id="@+id/box_med_panturrilha_esq"
                    android:inputType="numberDecimal" />

                <TextView android:text="Dir" />

                <EditText
                    android:id="@+id/box_med_panturrilha_dir"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_width="fill_parent" >

                <TextView android:text="@string/observacao" />

                <EditText
                    android:id="@+id/box_obs_aval"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_span="3" >
                </EditText>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/ok_button_aval"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/continuar" >
    </Button>

</LinearLayout>